--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,17 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>io.projectreactor.tools</groupId>
+            <artifactId>blockhound</artifactId>
+            <version>1.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <!-- tag::mongodb[] -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
