--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ logging.level.org.springframework.data=TRACE
 # tag::hidden[]
 spring.webflux.hiddenmethod.filter.enabled=true
 # end::hidden[]
+spring.devtools.restart.exclude=static/**,public/**
+logging.level.com.gregturnquist=DEBUG
+logging.level.web=DEBUG
