--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     <dependencies>
         <dependency>
             <groupId>io.projectreactor.tools</groupId>
+            <artifactId>blockhound-junit-platform</artifactId>
+            <version>1.0.3.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.tools</groupId>
             <artifactId>blockhound</artifactId>
             <version>1.0.3.RELEASE</version>
         </dependency>
