--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.greglturnquist</groupId>
-    <artifactId>hacking-spring-boot-ch2-reactive</artifactId>
+    <groupId>com.kkm</groupId>
+    <artifactId>spring-reactive-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Hacking with Spring Boot - Chapter 2 - Reactive Data</name>
-    <description>Demo project for Hacking with Spring Boot</description>
+    <name>kms spring-reactive-demo</name>
+    <description>kms spring-reactive-demo</description>
 
     <properties>
         <java.version>1.8</java.version>
