--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     </build>
 
     <dependencies>
-        <dependency>
+       <!-- <dependency>
             <groupId>io.projectreactor.tools</groupId>
             <artifactId>blockhound-junit-platform</artifactId>
             <version>1.0.3.RELEASE</version>
@@ -41,7 +41,7 @@
             <groupId>io.projectreactor.tools</groupId>
             <artifactId>blockhound</artifactId>
             <version>1.0.3.RELEASE</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
