--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.webflux.hiddenmethod.filter.enabled=true
 spring.devtools.restart.exclude=static/**,public/**
 logging.level.com.gregturnquist=DEBUG
 logging.level.web=DEBUG
+management.endpoint.health.show-details=always
+info.project.version=@project.version@
+info.java.version=@java.version@
+info.spring.framework.version=@spring-framework.version@
+info.spring.data.version=@spring-data-bom.version@
+management.endpoints.web.exposure.include=*
